--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -30,25 +30,33 @@ spec:
         - containerPort: 3000
         resources:
           requests:
-            cpu: "100m"
-            memory: "256Mi"
-          limits:
-            cpu: "500m"
+            cpu: "200m"
             memory: "512Mi"
+          limits:
+            cpu: "1000m"
+            memory: "1Gi"
         readinessProbe:
           httpGet:
             path: /api/health
             port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 5
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
         livenessProbe:
           httpGet:
             path: /api/health
             port: 3000
-          initialDelaySeconds: 20
-          periodSeconds: 15
+          initialDelaySeconds: 60
+          periodSeconds: 20
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
         env:
         - name: NODE_ENV
           value: "production"
         - name: PORT
           value: "3000"
+        - name: NODE_OPTIONS
+          value: "--max-old-space-size=768"
